# pallas.py

./: .gitignore  LICENSE  README.md  TODO.md  cron-runner.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: mactests.yml  python-publish.yml
docs/: README.md
scripts/: cleanup.py  pallas-get-UAFAssets.py  test-fmoverrides-mac.py
scripts/core/: Assets.py  AudienceLookups.py  FileManager.py  PallasRequest.py
scripts/utils/: Assets.py  AudienceLookups.py  DeviceType.py  GHVersionReverts.py  OSTrainDevicePair.py
src/: requirements.txt
src/pallas/: __main__.py  asset.py  response.py
src/pallas/actions/: Downloading.py  Fetching.py  Saving.py
src/pallas/utils/: Assets.py  Audience.py  OSTrainDevicePair.py  PallasRequest.py  UAFAssets.py
tests/: test_filemanager.py  test_pallasrequest.py
tests/assets/: pallas_base64.txt  pallas_base64_decoded.json
tests/pallas/: assest-tests.py  response-tests.py
tests/pallas/utils/: pallasrequest-tests.py
