[project]
name = "pallas"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
keywords = ["apple", "pallas", "mobiledevice", "mobile device", "ios", "macos", "siri", "tvos", "xros", "visionos"]
version = "2024.08.30"
authors = [
    {name = "@Riigess", email = "56428356+Riigess@users.noreply.github.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Documentation = "https://github.com/Riigess/UAFAssets-updater/tree/library/docs"
Repository = "https://github.com/Riigess/UAFAssets-Updater"
Issues = "https://github.com/Riigess/UAFAssets-Updater/issues"

[build-system]
requires = ["setuptools", "pyyaml", "requests", "certifi", "charset_normalizer", "idna", "urllib3"]
